[gd_scene load_steps=14 format=3 uid="uid://7t6gjyxgshnk"]

[ext_resource type="Script" uid="uid://b0v8ighdy3ybo" path="res://levelSelect/levelSelect.gd" id="1_hcn63"]
[ext_resource type="Texture2D" uid="uid://w62rfgkmj2n7" path="res://levelSelect/assets/stage.jpg" id="1_pmsvn"]
[ext_resource type="Texture2D" uid="uid://da4oi3b52er4b" path="res://levelSelect/assets/branch.png" id="2_hcn63"]
[ext_resource type="Texture2D" uid="uid://b8k2hhidci1gp" path="res://levelSelect/assets/branch2.png" id="3_q4fc6"]
[ext_resource type="Texture2D" uid="uid://bqk782u2whkw2" path="res://Shared/assets/tangaraCabeca-de-ouro.jpeg" id="4_gmxw2"]
[ext_resource type="Texture2D" uid="uid://cvtqax8ofcdrc" path="res://levelSelect/assets/tangaraDancarino.jpg" id="5_xieua"]
[ext_resource type="Texture2D" uid="uid://dqv3j851iu40n" path="res://levelSelect/assets/lock.jpg" id="6_lr5va"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmsvn"]
size = Vector2(591, 203)

[sub_resource type="LabelSettings" id="LabelSettings_hcn63"]
font_size = 22
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcn63"]
size = Vector2(990, 248.571)

[sub_resource type="LabelSettings" id="LabelSettings_q4fc6"]
font_size = 39
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gmxw2"]
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_hcn63"]
Button/font_sizes/font_size = 64

[node name="levelSelect" type="Node2D"]
script = ExtResource("1_hcn63")

[node name="Stage" type="Sprite2D" parent="."]
position = Vector2(992, 582)
scale = Vector2(3.71944, 3.71944)
texture = ExtResource("1_pmsvn")

[node name="Branch" type="Sprite2D" parent="."]
position = Vector2(1139, 770)
rotation = 0.0776507
scale = Vector2(0.720371, 0.44)
texture = ExtResource("2_hcn63")

[node name="Branch2" type="Sprite2D" parent="."]
position = Vector2(922, 418)
scale = Vector2(0.333467, 0.431196)
texture = ExtResource("3_q4fc6")

[node name="TangaraCabeca-encarnada" type="Sprite2D" parent="."]
position = Vector2(584, 448)
texture = ExtResource("4_gmxw2")

[node name="Area2D" type="Area2D" parent="TangaraCabeca-encarnada"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TangaraCabeca-encarnada/Area2D"]
position = Vector2(-166.5, -0.5)
shape = SubResource("RectangleShape2D_pmsvn")

[node name="name" type="Label" parent="TangaraCabeca-encarnada"]
offset_left = -143.0
offset_top = 106.0
offset_right = 142.0
offset_bottom = 137.0
text = "Tangará cabeca-encarnada"
label_settings = SubResource("LabelSettings_hcn63")

[node name="VBoxContainer" type="CenterContainer" parent="TangaraCabeca-encarnada"]
visible = false
custom_minimum_size = Vector2(64, 64)
offset_left = -429.0
offset_top = -100.0
offset_right = -145.0
offset_bottom = 98.0

[node name="Button" type="Button" parent="TangaraCabeca-encarnada/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "iniciar"

[node name="TangaraDancarino" type="Sprite2D" parent="."]
position = Vector2(1257, 754)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_xieua")

[node name="Area2D" type="Area2D" parent="TangaraDancarino"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TangaraDancarino/Area2D"]
position = Vector2(292.143, -1.42859)
shape = SubResource("RectangleShape2D_hcn63")

[node name="name" type="Label" parent="TangaraDancarino"]
offset_left = -174.286
offset_top = 128.571
offset_right = 182.714
offset_bottom = 182.571
text = "Tangará Dancarino"
label_settings = SubResource("LabelSettings_q4fc6")

[node name="VBoxContainer" type="CenterContainer" parent="TangaraDancarino"]
visible = false
custom_minimum_size = Vector2(64, 64)
offset_left = 227.143
offset_top = -91.4286
offset_right = 511.143
offset_bottom = 106.571

[node name="Button" type="Button" parent="TangaraDancarino/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Bloqueado"

[node name="Lock" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.388235)
position = Vector2(1253, 755)
scale = Vector2(0.166327, 0.166327)
texture = ExtResource("6_lr5va")

[node name="title" type="Label" parent="."]
offset_left = 695.0
offset_top = 124.0
offset_right = 1244.0
offset_bottom = 212.0
text = "Escolha o pássaro"
label_settings = SubResource("LabelSettings_gmxw2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
position_smoothing_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 663.0
offset_top = 967.0
offset_right = 1256.0
offset_bottom = 1063.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_hcn63")
theme_override_constants/separation = 150

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "tutorial"

[node name="Button2" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "placar"

[connection signal="mouse_entered" from="TangaraCabeca-encarnada/Area2D" to="." method="_on_cabeca_encarnada_mouse_entered"]
[connection signal="mouse_exited" from="TangaraCabeca-encarnada/Area2D" to="." method="_on_cabeca_encarnada_mouse_exited"]
[connection signal="pressed" from="TangaraCabeca-encarnada/VBoxContainer/Button" to="." method="_on_cabeca_encarnada_pressed"]
[connection signal="mouse_entered" from="TangaraDancarino/Area2D" to="." method="_on_dancarino_mouse_entered"]
[connection signal="mouse_exited" from="TangaraDancarino/Area2D" to="." method="_on_dancarino_mouse_exited"]
[connection signal="pressed" from="TangaraDancarino/VBoxContainer/Button" to="." method="_on_dancarino_pressed"]
